--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.1.0",
   "packageManager": "pnpm@8.6.12",
   "description": "",
+  "author": "FliPPeDround <flippedround@qq.com>",
   "license": "MIT",
+  "funding": "https://afdian.net/a/flippedround",
   "homepage": "https://github.com/flippedround/uni-devtools#readme",
   "repository": {
     "type": "git",
@@ -40,7 +42,8 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "src/UniDevTools.vue"
   ],
   "scripts": {
     "build": "tsup",
