--- a/package.json
+++ b/package.json
@@ -66,14 +66,15 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.2.2",
+    "@swc/core": "^1.5.5",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.10.3",
     "bumpp": "^9.2.0",
     "chalk": "^5.3.0",
     "eslint": "^8.55.0",
     "esno": "^4.0.0",
-    "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
+    "glob": "^10.3.12",
     "nodemon": "^3.0.2",
     "rimraf": "^5.0.5",
     "rollup": "^4.6.1",
