--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "resolveJsonModule": true,
     "types": [
       "vite/client",
-      "unplugin-vue-router/client",
+      "vite-plugin-pages/client"
     ],
     "allowJs": true,
     "strict": true,
@@ -18,6 +18,6 @@
     "skipLibCheck": true,
     "jsx": "preserve",
   },
-  "include": ["src/client/typed-router.d.ts"],
-  "exclude": ["dist", "eslint.config.js",  "node_modules"]
+  // "include": ["src/client/typed-router.d.ts"],
+  "exclude": ["**/dist", "eslint.config.js",  "node_modules"]
 }
