--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
+    "jsx": "preserve",
     "lib": ["esnext", "DOM"],
     "module": "esnext",
     "moduleResolution": "node",
@@ -15,9 +16,8 @@
     "noUnusedLocals": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-    "jsx": "preserve",
+    "skipLibCheck": true
   },
   // "include": ["src/client/typed-router.d.ts"],
-  "exclude": ["**/dist", "eslint.config.js",  "node_modules"]
+  "exclude": ["**/dist", "eslint.config.js", "node_modules"]
 }
