--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     }
   },
   "dependencies": {
+    "@varlet/ui": "^3.2.10",
     "@vue/compiler-sfc": "^3.4.27",
     "@vueuse/core": "^10.9.0",
     "birpc": "^0.2.17",
@@ -91,6 +92,7 @@
     "@unocss/eslint-config": "^0.59.4",
     "@unocss/eslint-plugin": "^0.59.4",
     "@unocss/reset": "^0.59.4",
+    "@varlet/import-resolver": "^3.2.10",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue-macros/volar": "^0.18.18",
     "@vue/test-utils": "^2.4.5",
