chore: import polka

--- a/package.json
+++ b/package.json
@@ -73,8 +73,11 @@
   "dependencies": {
     "@varlet/ui": "^3.2.10",
     "@vue/compiler-sfc": "^3.4.27",
+    "@vue/devtools-ui": "^7.2.1",
     "@vueuse/core": "^10.9.0",
     "birpc": "^0.2.17",
+    "h3": "^1.11.1",
+    "polka": "^0.5.2",
     "sirv": "^2.0.4",
     "vite-dev-rpc": "^0.1.4",
     "vite-hot-client": "^0.2.3",
@@ -88,6 +91,7 @@
     "@swc/core": "^1.5.5",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.12.7",
+    "@types/polka": "^0.5.7",
     "@types/ws": "^8.5.10",
     "@unocss/eslint-config": "^0.59.4",
     "@unocss/eslint-plugin": "^0.59.4",
