--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.15.0",
     "@iconify-json/carbon": "^1.1.31",
+    "@iconify-json/logos": "^1.1.42",
     "@nuxt/devtools-ui-kit": "^1.2.0",
     "@swc/core": "^1.5.5",
     "@types/fs-extra": "^11.0.4",
