chore: use unbuild replace tsup

--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
   ],
   "scripts": {
     "build": "rimraf dist && run-s build:*",
-    "build:node": "tsup",
+    "build:node": "unbuild",
     "build:client": "vite build src/client",
-    "dev": "run-s dev:*",
-    "dev:node": "tsup --watch src",
+    "dev": "nr dev:node && nr dev:client",
+    "dev:node": "unbuild --stub",
     "preview": "vite preview src/client",
     "dev:client": "vite build src/client --watch",
     "build:fix": "esno scripts/postbuild.ts",
@@ -120,6 +120,7 @@
     "taze": "^0.13.6",
     "tsup": "^8.0.1",
     "typescript": "^5.4.5",
+    "unbuild": "^2.0.0",
     "unocss": "^0.59.4",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
