--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uni-devtools",
   "type": "module",
   "version": "0.1.0",
-  "packageManager": "pnpm@8.6.12",
+  "packageManager": "pnpm@9.0.2",
   "description": "",
   "author": "FliPPeDround <flippedround@qq.com>",
   "license": "MIT",
@@ -24,15 +24,15 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "types": "./dist/node/index.d.ts",
+      "import": "./dist/node/index.mjs",
+      "require": "./dist/node/index.cjs"
     },
     "./*": "./*"
   },
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/node/index.cjs",
+  "module": "dist/node/index.mjs",
+  "types": "dist/node/index.d.ts",
   "typesVersions": {
     "*": {
       "*": [
