--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@vueuse/core": "^10.9.0",
     "birpc": "^0.2.17",
     "h3": "^1.11.1",
+    "local-pkg": "^0.5.0",
     "polka": "^0.5.2",
     "sirv": "^2.0.4",
     "vite-dev-rpc": "^0.1.4",
