feat: nodemon watch all src

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "build": "rimraf dist && run-s build:*",
     "build:node": "unbuild",
     "build:client": "vite build src/client",
-    "dev": "nr dev:node && nr dev:client",
+    "dev": "concurrently \"nr dev:node\" \"nr dev:client\" \"nodemon\"",
     "dev:node": "unbuild --stub",
     "preview": "vite preview src/client",
     "dev:client": "vite build src/client --watch",
@@ -57,6 +57,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "play": "npm -C playground run dev",
+    "play:wx": "npm -C playground run dev:mp-weixin",
     "prepublishOnly": "npm run build",
     "release": "bumpp && npm publish",
     "start": "esno src/index.ts",
