--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "es2018",
     "jsx": "preserve",
     "lib": ["esnext", "DOM"],
     "baseUrl": ".",
