--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "build": "rimraf dist && run-s build:*",
     "build:node": "unbuild",
     "build:client": "vite build src/client",
-    "dev": "nr dev:node && nr dev:client",
+    "dev": "pnpm dev:node && pnpm dev:client",
     "dev:node": "unbuild --stub",
     "preview": "vite preview src/client",
     "dev:client": "vite build src/client --watch",
@@ -72,27 +72,19 @@
     }
   },
   "dependencies": {
-    "@varlet/ui": "^3.2.10",
-    "@vue/compiler-sfc": "^3.4.27",
     "@vue/devtools-ui": "^7.2.1",
     "@vueuse/core": "^10.9.0",
-    "birpc": "^0.2.17",
-    "h3": "^1.11.1",
     "local-pkg": "^0.5.0",
+    "pinia": "^2.1.7",
     "polka": "^0.5.2",
     "sirv": "^2.0.4",
-    "vite-dev-rpc": "^0.1.4",
-    "vite-hot-client": "^0.2.3",
-    "vite-plugin-inspect": "^0.8.4",
-    "vue-router": "^4.3.2",
-    "ws": "^8.17.0"
+    "vue": "^3.4.23",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.15.0",
     "@iconify-json/carbon": "^1.1.31",
     "@iconify-json/logos": "^1.1.42",
-    "@nuxt/devtools-ui-kit": "^1.2.0",
-    "@swc/core": "^1.5.5",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.12.7",
     "@types/polka": "^0.5.7",
@@ -100,39 +92,28 @@
     "@unocss/eslint-config": "^0.59.4",
     "@unocss/eslint-plugin": "^0.59.4",
     "@unocss/reset": "^0.59.4",
-    "@varlet/import-resolver": "^3.2.10",
     "@vitejs/plugin-vue": "^5.0.4",
-    "@vue-macros/volar": "^0.18.18",
-    "@vue/test-utils": "^2.4.5",
+    "@vue/compiler-sfc": "^3.4.27",
     "bumpp": "^9.2.0",
     "chalk": "^5.3.0",
     "concurrently": "^8.2.2",
     "eslint": "^9.0.0",
     "eslint-plugin-format": "^0.1.1",
-    "esno": "^4.0.0",
     "fs-extra": "^11.2.0",
     "glob": "^10.3.12",
-    "jsdom": "^24.0.0",
-    "lint-staged": "^15.2.2",
     "nodemon": "^3.0.2",
-    "pinia": "^2.1.7",
     "pnpm": "^9.0.2",
     "rimraf": "^5.0.5",
-    "rollup": "^4.6.1",
-    "simple-git-hooks": "^2.11.1",
-    "taze": "^0.13.6",
     "tsup": "^8.0.1",
     "typescript": "^5.4.5",
     "unbuild": "^2.0.0",
     "unocss": "^0.59.4",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
-    "unplugin-vue-macros": "^2.9.1",
     "unplugin-vue-router": "^0.8.6",
     "vite": "^5.2.9",
-    "vite-plugin-pages": "^0.32.1",
+    "vite-plugin-inspect": "^0.8.4",
     "vitest": "^1.5.0",
-    "vue": "^3.4.23",
     "vue-tsc": "^2.0.13"
   }
 }
