--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,15 +5,14 @@
     "lib": ["esnext", "DOM"],
     "baseUrl": ".",
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "paths": {
-      "~/*": ["src/client/*"],
-      "@/*": ["src/node/*"]
+      "@/*": ["./src/node/*"]
     },
     "resolveJsonModule": true,
     "types": [
       "vite/client",
-      "vite-plugin-pages/client"
+      "unplugin-vue-router/client"
     ],
     "allowJs": true,
     "strict": true,
@@ -24,5 +23,6 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "exclude": ["**/dist", "eslint.config.js", "**/uniJs.js"]
+  "include": ["./src/client/typed-router.d.ts"],
+  "exclude": ["**/dist", "eslint.config.js", "node_modules", "**/uniJs.js"]
 }
