--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "uni-devtools",
+  "name": "@uni-helper/devtools-monorepo",
   "type": "module",
   "version": "0.1.0",
+  "private": true,
   "packageManager": "pnpm@9.0.2",
-  "description": "",
+  "description": "devtools for uni",
   "author": "FliPPeDround <flippedround@qq.com>",
   "license": "MIT",
   "funding": "https://afdian.net/a/flippedround",
@@ -20,100 +21,28 @@
     "vite",
     "webpack",
     "rollup",
-    "transform"
-  ],
-  "exports": {
-    ".": {
-      "types": "./dist/node/index.d.ts",
-      "import": "./dist/node/index.mjs",
-      "require": "./dist/node/index.cjs"
-    },
-    "./*": "./*"
-  },
-  "main": "dist/node/index.cjs",
-  "module": "dist/node/index.mjs",
-  "types": "dist/node/index.d.ts",
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./dist/*",
-        "./*"
-      ]
-    }
-  },
-  "files": [
-    "dist",
-    "src/node/UniDevTools.vue"
+    "transform",
+    "dx"
   ],
   "scripts": {
-    "build": "rimraf dist && run-s build:*",
-    "build:node": "unbuild",
-    "build:client": "vite build src/client",
-    "dev": "pnpm dev:node && pnpm dev:client",
-    "dev:node": "unbuild --stub",
-    "preview": "vite preview src/client",
-    "dev:client": "vite build src/client --watch",
-    "build:fix": "esno scripts/postbuild.ts",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
-    "play": "npm -C playground run dev",
-    "play:wx": "nodemon",
-    "prepublishOnly": "npm run build",
-    "release": "bumpp && npm publish",
-    "start": "esno src/index.ts",
-    "test": "vitest"
-  },
-  "peerDependencies": {
-    "vite": ">=3"
-  },
-  "peerDependenciesMeta": {
-    "vite": {
-      "optional": true
-    }
-  },
-  "dependencies": {
-    "@vue/devtools-ui": "^7.2.1",
-    "@vueuse/core": "^10.9.0",
-    "local-pkg": "^0.5.0",
-    "pinia": "^2.1.7",
-    "polka": "^0.5.2",
-    "sirv": "^2.0.4",
-    "vue": "^3.4.23",
-    "vue-router": "^4.3.2"
+    "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.15.0",
-    "@iconify-json/carbon": "^1.1.31",
-    "@iconify-json/logos": "^1.1.42",
-    "@types/fs-extra": "^11.0.4",
+    "@antfu/ni": "^0.21.12",
     "@types/node": "^20.12.7",
-    "@types/polka": "^0.5.7",
-    "@types/ws": "^8.5.10",
     "@unocss/eslint-config": "^0.59.4",
     "@unocss/eslint-plugin": "^0.59.4",
     "@unocss/reset": "^0.59.4",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/compiler-sfc": "^3.4.27",
     "bumpp": "^9.2.0",
-    "chalk": "^5.3.0",
     "concurrently": "^8.2.2",
     "eslint": "^9.0.0",
     "eslint-plugin-format": "^0.1.1",
-    "fs-extra": "^11.2.0",
-    "glob": "^10.3.12",
     "nodemon": "^3.0.2",
     "pnpm": "^9.0.2",
     "rimraf": "^5.0.5",
-    "tsup": "^8.0.1",
+    "turbo": "^1.12.5",
     "typescript": "^5.4.5",
-    "unbuild": "^2.0.0",
-    "unocss": "^0.59.4",
-    "unplugin-auto-import": "^0.17.5",
-    "unplugin-vue-components": "^0.26.0",
-    "unplugin-vue-router": "^0.8.6",
-    "vite": "^5.2.9",
-    "vite-plugin-inspect": "^0.8.4",
-    "vitest": "^1.5.0",
-    "vue-tsc": "^2.0.13"
+    "vitest": "^1.5.0"
   }
 }
