--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "concurrently": "^8.2.2",
     "eslint": "^9.0.0",
     "eslint-plugin-format": "^0.1.1",
+    "kill-port": "^2.0.1",
     "nodemon": "^3.0.2",
     "pnpm": "^9.0.2",
     "rimraf": "^5.0.5",
+    "tsup": "^8.0.1",
     "turbo": "^1.13.4",
     "typescript": "^5.4.5",
     "vitest": "^1.5.0"
