--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -18,6 +18,7 @@
     "strict": true,
     "strictNullChecks": true,
     "noUnusedLocals": true,
+    "noEmit": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
@@ -25,6 +26,7 @@
   "exclude": [
     "dist",
     "node_modules",
-    "eslint.config.js"
+    "eslint.config.js",
+    "src/utils/uniJs.js"
   ]
 }
