--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@uni-helper/devtools",
+  "name": "@uni-helper/devtools-shared",
   "type": "module",
   "version": "0.1.0",
+  "private": true,
   "packageManager": "pnpm@9.0.2",
-  "description": "",
+  "description": "devtools for uni",
   "author": "FliPPeDround <flippedround@qq.com>",
   "license": "MIT",
   "funding": "https://afdian.net/a/flippedround",
@@ -20,18 +21,19 @@
     "vite",
     "webpack",
     "rollup",
-    "transform"
+    "transform",
+    "dx"
   ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
+      "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     },
     "./*": "./*"
   },
   "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "typesVersions": {
     "*": {
@@ -42,34 +44,14 @@
     }
   },
   "files": [
-    "client",
-    "dist",
-    "src/inspect/UniDevTools.vue"
+    "dist"
   ],
   "scripts": {
-    "stub": "unbuild --stub",
-    "build": "unbuild",
+    "build": "tsup",
+    "stub": "tsup --watch",
     "test": "vitest"
   },
-  "peerDependencies": {
-    "vite": "^3.1.0 || ^4.0.0-0 || ^5.0.0-0"
-  },
   "dependencies": {
-    "@uni-helper/devtools-shared": "workspace:*",
-    "@vue/compiler-sfc": "^3.4.27",
-    "local-pkg": "^0.5.0",
-    "polka": "^0.5.2",
-    "sirv": "^2.0.4",
-    "vite-plugin-inspect": "^0.8.4"
-  },
-  "devDependencies": {
-    "@types/fs-extra": "^11.0.4",
-    "@types/polka": "^0.5.7",
-    "chalk": "^5.3.0",
-    "fs-extra": "^11.2.0",
-    "glob": "^10.3.12",
-    "tsup": "^8.0.1",
-    "unbuild": "^2.0.0",
-    "vite": "^5.2.9"
+    "lz-string": "^1.5.0"
   }
 }
