--- a/package.json
+++ b/package.json
@@ -34,23 +34,24 @@
     "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.15.0",
+    "@antfu/eslint-config": "^2.21.1",
     "@antfu/ni": "^0.21.12",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.14.2",
     "@unocss/eslint-config": "^0.59.4",
     "@unocss/eslint-plugin": "^0.59.4",
     "@unocss/reset": "^0.59.4",
-    "bumpp": "^9.2.0",
+    "bumpp": "^9.4.1",
     "concurrently": "^8.2.2",
-    "eslint": "^9.0.0",
+    "eslint": "^9.4.0",
     "eslint-plugin-format": "^0.1.1",
+    "fast-glob": "^3.3.2",
     "kill-port": "^2.0.1",
-    "nodemon": "^3.0.2",
+    "nodemon": "^3.1.3",
     "pnpm": "^9.0.2",
-    "rimraf": "^5.0.5",
-    "tsup": "^8.0.1",
-    "turbo": "^1.13.4",
+    "rimraf": "^5.0.7",
+    "tsup": "^8.1.0",
+    "turbo": "^2.0.3",
     "typescript": "^5.4.5",
-    "vitest": "^1.5.0"
+    "vitest": "^1.6.0"
   }
 }
