--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -44,7 +44,7 @@
   "files": [
     "client",
     "dist",
-    "src/inspect/UniDevTools.vue"
+    "inspect"
   ],
   "scripts": {
     "stub": "unbuild --stub",
@@ -58,6 +58,7 @@
     "@uni-helper/devtools-shared": "workspace:*",
     "@vue/compiler-sfc": "^3.4.27",
     "local-pkg": "^0.5.0",
+    "magic-string": "^0.30.10",
     "polka": "^0.5.2",
     "sirv": "^2.0.4",
     "vite-plugin-inspect": "^0.8.4"
