--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "postinstall": "npx simple-git-hooks"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.21.1",
@@ -46,12 +47,20 @@
     "eslint-plugin-format": "^0.1.1",
     "fast-glob": "^3.3.2",
     "kill-port": "^2.0.1",
+    "lint-staged": "^15.2.0",
     "nodemon": "^3.1.3",
     "pnpm": "^9.0.2",
     "rimraf": "^5.0.7",
+    "simple-git-hooks": "^2.9.0",
     "tsup": "^8.1.0",
     "turbo": "^2.0.3",
     "typescript": "^5.4.5",
     "vitest": "^1.6.0"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
