--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -58,6 +58,7 @@
     "@uni-helper/devtools-shared": "workspace:*",
     "@uni-helper/uni-env": "^0.1.1",
     "@vue/compiler-sfc": "^3.4.27",
+    "json5": "^2.2.3",
     "local-pkg": "^0.5.0",
     "magic-string": "^0.30.10",
     "polka": "^0.5.2",
