--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -55,6 +55,7 @@
     "vite": "^3.1.0 || ^4.0.0-0 || ^5.0.0-0"
   },
   "dependencies": {
+    "@trpc/server": "^10.45.2",
     "@uni-helper/devtools-shared": "workspace:*",
     "@uni-helper/uni-env": "^0.1.1",
     "@vue/compiler-sfc": "^3.4.27",
