--- a/playground/package.json
+++ b/playground/package.json
@@ -1,19 +1,41 @@
 {
   "name": "playground",
-  "version": "0.0.0",
-  "private": true,
-  "packageManager": "pnpm@8.14.1",
+  "type": "commonjs",
+  "version": "2.4.3",
+  "description": "unibest - 最好的 uniapp 开发模板",
+  "author": {
+    "name": "codercup",
+    "zhName": "菲鸽",
+    "email": "1020103647@qq.com",
+    "github": "https://github.com/codercup",
+    "gitee": "https://gitee.com/codercup"
+  },
   "license": "MIT",
+  "repository": "https://github.com/codercup/unibest",
+  "repository-gitee": "https://gitee.com/codercup/unibest",
+  "bugs": {
+    "url": "https://github.com/codercup/unibest/issues"
+  },
+  "homepage": "https://codercup.github.io/unibest/",
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=7.30"
+  },
   "scripts": {
-    "dev": "uni",
+    "uvm": "npx @dcloudio/uvm@latest",
+    "uvm-rm": "node ./scripts/postupgrade.js",
+    "postuvm": "echo upgrade uni-app success!",
     "dev:app": "uni -p app",
     "dev:app-android": "uni -p app-android",
     "dev:app-ios": "uni -p app-ios",
     "dev:custom": "uni -p",
+    "dev": "uni",
     "dev:h5": "uni",
     "dev:h5:ssr": "uni --ssr",
+    "dev:mp": "uni -p mp-weixin",
     "dev:mp-alipay": "uni -p mp-alipay",
     "dev:mp-baidu": "uni -p mp-baidu",
+    "dev:mp-jd": "uni -p mp-jd",
     "dev:mp-kuaishou": "uni -p mp-kuaishou",
     "dev:mp-lark": "uni -p mp-lark",
     "dev:mp-qq": "uni -p mp-qq",
@@ -21,56 +43,98 @@
     "dev:mp-weixin": "uni -p mp-weixin",
     "dev:quickapp-webview": "uni -p quickapp-webview",
     "dev:quickapp-webview-huawei": "uni -p quickapp-webview-huawei",
-    "dev:quickapp-webview-union": "uni -p quickapp-webview-union"
+    "dev:quickapp-webview-union": "uni -p quickapp-webview-union",
+    "build:app": "uni build -p app",
+    "build:app-android": "uni build -p app-android",
+    "build:app-ios": "uni build -p app-ios",
+    "build:custom": "uni build -p",
+    "build:h5": "uni build",
+    "build": "uni build",
+    "build:h5:ssr": "uni build --ssr",
+    "build:mp-alipay": "uni build -p mp-alipay",
+    "build:mp": "uni build -p mp-weixin",
+    "build:mp-baidu": "uni build -p mp-baidu",
+    "build:mp-jd": "uni build -p mp-jd",
+    "build:mp-kuaishou": "uni build -p mp-kuaishou",
+    "build:mp-lark": "uni build -p mp-lark",
+    "build:mp-qq": "uni build -p mp-qq",
+    "build:mp-toutiao": "uni build -p mp-toutiao",
+    "build:mp-weixin": "uni build -p mp-weixin",
+    "build:quickapp-webview": "uni build -p quickapp-webview",
+    "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
+    "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
+    "type-check": "vue-tsc --noEmit",
+    "cz": "czg"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-components": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-h5": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-jd": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-mp-xhs": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-4000020240111001",
-    "@vueuse/core": "^10.7.2",
-    "vue": "^3.3.8",
-    "vue-i18n": "^9.6.5"
+    "@dcloudio/uni-app": "3.0.0-alpha-4010520240507001",
+    "@dcloudio/uni-app-plus": "3.0.0-alpha-4010520240507001",
+    "@dcloudio/uni-components": "3.0.0-alpha-4010520240507001",
+    "@dcloudio/uni-h5": "3.0.0-alpha-4010520240507001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-4010520240507001",
+    "czg": "^1.9.3",
+    "dayjs": "1.11.10",
+    "pinia": "2.0.36",
+    "pinia-plugin-persistedstate": "3.2.1",
+    "qs": "6.5.3",
+    "vue": "3.4.21",
+    "wot-design-uni": "^1.2.26",
+    "z-paging": "^2.7.10"
   },
   "devDependencies": {
-    "@dcloudio/types": "^3.4.7",
-    "@dcloudio/uni-automator": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-stacktracey": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/uni-vue-devtools": "3.0.0-alpha-4000020240111001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-4000020240111001",
-    "@iconify-json/carbon": "^1.1.27",
-    "@types/node": "^20.11.4",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.3",
+    "@dcloudio/types": "^3.4.8",
+    "@dcloudio/uni-automator": "3.0.0-alpha-4010520240507001",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-4010520240507001",
+    "@dcloudio/uni-stacktracey": "3.0.0-alpha-4010520240507001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-4010520240507001",
+    "@esbuild/darwin-arm64": "0.20.2",
+    "@esbuild/darwin-x64": "0.20.2",
+    "@iconify-json/carbon": "^1.1.35",
     "@uni-helper/devtools": "workspace:*",
-    "@uni-helper/eslint-config": "^0.0.6",
-    "@uni-helper/uni-app-types": "^0.5.12",
-    "@uni-helper/uni-env": "^0.1.1",
-    "@uni-helper/unocss-preset-uni": "^0.2.6",
-    "@uni-helper/vite-plugin-uni-components": "^0.0.8",
-    "@uni-helper/vite-plugin-uni-layouts": "^0.1.7",
-    "@uni-helper/vite-plugin-uni-manifest": "^0.2.3",
-    "@uni-helper/vite-plugin-uni-pages": "^0.2.14",
-    "@uni-helper/volar-service-uni-pages": "^0.2.14",
-    "@unocss/eslint-config": "^0.58.3",
-    "@vue/runtime-core": "^3.3.8",
-    "@vue/tsconfig": "^0.5.1",
-    "eslint": "^8.56.0",
-    "lint-staged": "^15.2.0",
-    "simple-git-hooks": "^2.9.0",
-    "typescript": "^5.3.3",
-    "unocss": "^0.58.3",
-    "unplugin-auto-import": "^0.17.3",
-    "vite": "^5.0.11",
+    "@rollup/rollup-darwin-x64": "^4.18.0",
+    "@types/node": "^20.14.2",
+    "@types/wechat-miniprogram": "^3.4.7",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@uni-helper/vite-plugin-uni-layouts": "^0.1.10",
+    "@uni-helper/vite-plugin-uni-manifest": "^0.2.6",
+    "@uni-helper/vite-plugin-uni-pages": "0.2.20",
+    "@uni-helper/vite-plugin-uni-platform": "^0.0.4",
+    "@unocss/preset-legacy-compat": "^0.59.4",
+    "@vue/runtime-core": "^3.4.29",
+    "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.19",
+    "commitlint": "^18.6.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.26.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.7",
+    "postcss": "^8.4.38",
+    "postcss-html": "^1.7.0",
+    "postcss-scss": "^4.0.9",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "sass": "^1.77.5",
+    "stylelint": "^16.6.1",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recess-order": "^4.6.0",
+    "stylelint-config-recommended": "^14.0.0",
+    "stylelint-config-recommended-scss": "^14.0.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-prettier": "^5.0.0",
+    "terser": "^5.31.1",
+    "typescript": "^4.9.5",
+    "unocss": "^0.58.9",
+    "unocss-applet": "^0.7.8",
+    "unplugin-auto-import": "^0.17.6",
+    "vite": "5.2.8",
+    "vite-plugin-restart": "^0.4.0",
     "vue-tsc": "^1.8.27"
   }
 }
