--- a/playground/src/manifest.json
+++ b/playground/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "unibest",
-  "appid": "H57F2ACE4",
+  "name": "vitesse-uni-app",
+  "appid": "",
   "description": "",
   "versionName": "1.0.0",
   "versionCode": "100",
@@ -34,64 +34,24 @@
           "<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>",
           "<uses-feature android:name=\"android.hardware.camera\"/>",
           "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
-        ],
-        "minSdkVersion": 30,
-        "targetSdkVersion": 30,
-        "abiFilters": [
-          "armeabi-v7a",
-          "arm64-v8a"
         ]
       },
       "ios": {},
-      "sdkConfigs": {},
-      "icons": {
-        "android": {
-          "hdpi": "static/app/icons/72x72.png",
-          "xhdpi": "static/app/icons/96x96.png",
-          "xxhdpi": "static/app/icons/144x144.png",
-          "xxxhdpi": "static/app/icons/192x192.png"
-        },
-        "ios": {
-          "appstore": "static/app/icons/1024x1024.png",
-          "ipad": {
-            "app": "static/app/icons/76x76.png",
-            "app@2x": "static/app/icons/152x152.png",
-            "notification": "static/app/icons/20x20.png",
-            "notification@2x": "static/app/icons/40x40.png",
-            "proapp@2x": "static/app/icons/167x167.png",
-            "settings": "static/app/icons/29x29.png",
-            "settings@2x": "static/app/icons/58x58.png",
-            "spotlight": "static/app/icons/40x40.png",
-            "spotlight@2x": "static/app/icons/80x80.png"
-          },
-          "iphone": {
-            "app@2x": "static/app/icons/120x120.png",
-            "app@3x": "static/app/icons/180x180.png",
-            "notification@2x": "static/app/icons/40x40.png",
-            "notification@3x": "static/app/icons/60x60.png",
-            "settings@2x": "static/app/icons/58x58.png",
-            "settings@3x": "static/app/icons/87x87.png",
-            "spotlight@2x": "static/app/icons/80x80.png",
-            "spotlight@3x": "static/app/icons/120x120.png"
-          }
-        }
-      }
-    },
-    "compatible": {
-      "ignoreVersion": true
+      "sdkConfigs": {}
     }
   },
   "quickapp": {},
   "mp-weixin": {
-    "appid": "wxa2abb91f64032a2b",
+    "appid": "",
     "setting": {
       "urlCheck": false
     },
-    "usingComponents": true
+    "usingComponents": true,
+    "darkmode": true,
+    "themeLocation": "theme.json"
   },
   "mp-alipay": {
-    "usingComponents": true,
-    "styleIsolation": "shared"
+    "usingComponents": true
   },
   "mp-baidu": {
     "usingComponents": true
@@ -104,8 +64,7 @@
   },
   "vueVersion": "3",
   "h5": {
-    "router": {
-      "base": "/unibest/"
-    }
+    "darkmode": true,
+    "themeLocation": "theme.json"
   }
 }
