--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.33",
     "@iconify-json/logos": "^1.1.42",
+    "@iconify-json/radix-icons": "^1.1.14",
     "@uni-helper/devtools": "workspace:*",
     "@unocss/reset": "^0.60.2",
     "@vitejs/plugin-vue": "^5.0.4",
