--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,6 +27,7 @@
     "@uni-helper/devtools-shared": "workspace:*",
     "@vue/devtools-ui": "^7.2.1",
     "@vueuse/core": "^10.9.0",
+    "fuse.js": "^7.0.0",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
