--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -28,6 +28,7 @@
     "@vue/devtools-ui": "^7.2.1",
     "@vueuse/core": "^10.9.0",
     "fuse.js": "^7.0.0",
+    "shiki": "^1.7.0",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
