--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -59,6 +59,7 @@
     "@uni-helper/devtools-shared": "workspace:*",
     "@uni-helper/uni-env": "^0.1.1",
     "@vue/compiler-sfc": "^3.4.27",
+    "image-meta": "^0.2.0",
     "json5": "^2.2.3",
     "local-pkg": "^0.5.0",
     "magic-string": "^0.30.10",
@@ -66,7 +67,8 @@
     "polka": "^0.5.2",
     "sirv": "^2.0.4",
     "vite-plugin-inspect": "^0.8.4",
-    "vite-plugin-vue-devtools": "^7.2.1"
+    "vite-plugin-vue-devtools": "^7.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
