--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -59,6 +59,7 @@
     "@uni-helper/devtools-shared": "workspace:*",
     "@uni-helper/uni-env": "^0.1.1",
     "@vue/compiler-sfc": "^3.4.27",
+    "execa": "^9.3.0",
     "image-meta": "^0.2.0",
     "json5": "^2.2.3",
     "local-pkg": "^0.5.0",
