--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,8 +25,9 @@
   "dependencies": {
     "@trpc/client": "^10.45.2",
     "@uni-helper/devtools-shared": "workspace:*",
-    "@vue/devtools-ui": "^7.2.1",
+    "@vue/devtools-ui": "^7.3.4",
     "@vueuse/core": "^10.9.0",
+    "floating-vue": "^5.2.2",
     "fuse.js": "^7.0.0",
     "shiki": "^1.7.0",
     "vue": "^3.4.27",
