--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -62,6 +62,7 @@
     "execa": "^9.3.0",
     "image-meta": "^0.2.0",
     "json5": "^2.2.3",
+    "launch-editor": "^2.8.0",
     "local-pkg": "^0.5.0",
     "magic-string": "^0.30.10",
     "mime": "^4.0.3",
