--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -66,6 +66,7 @@
     "local-pkg": "^0.5.0",
     "magic-string": "^0.30.10",
     "mime": "^4.0.3",
+    "open": "^10.1.0",
     "polka": "^0.5.2",
     "sirv": "^2.0.4",
     "vite-plugin-inspect": "^0.8.4",
