--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -30,6 +30,7 @@
     "floating-vue": "^5.2.2",
     "fuse.js": "^7.0.0",
     "shiki": "^1.7.0",
+    "splitpanes": "^3.1.5",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
@@ -37,6 +38,7 @@
     "@iconify-json/carbon": "^1.1.33",
     "@iconify-json/logos": "^1.1.42",
     "@iconify-json/radix-icons": "^1.1.14",
+    "@types/splitpanes": "^2.2.6",
     "@uni-helper/devtools": "workspace:*",
     "@unocss/reset": "^0.60.2",
     "@vitejs/plugin-vue": "^5.0.4",
