--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -59,6 +59,7 @@
     "@uni-helper/devtools-shared": "workspace:*",
     "@uni-helper/uni-env": "^0.1.1",
     "@vue/compiler-sfc": "^3.4.27",
+    "body-parser": "^1.20.2",
     "execa": "^9.3.0",
     "image-meta": "^0.2.0",
     "json5": "^2.2.3",
@@ -76,6 +77,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@dcloudio/types": "^3.4.7",
     "@types/fs-extra": "^11.0.4",
     "@types/minimist": "^1.2.5",
     "@types/polka": "^0.5.7",
