--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -60,6 +60,7 @@
     "@uni-helper/uni-env": "^0.1.1",
     "@vue/compiler-sfc": "^3.4.27",
     "body-parser": "^1.20.2",
+    "error-stack-parser-es": "^0.1.4",
     "execa": "^9.3.0",
     "image-meta": "^0.2.0",
     "json5": "^2.2.3",
