feat: use v10 trpc/client

--- a/packages/plugin/tsconfig.json
+++ b/packages/plugin/tsconfig.json
@@ -8,6 +8,7 @@
     "resolveJsonModule": true,
     "types": ["@dcloudio/types"],
     "allowJs": true,
+    "checkJs": true,
     "strict": true,
     "strictNullChecks": true,
     "noImplicitAny": false,
