--- a/packages/trpc-client/package.json
+++ b/packages/trpc-client/package.json
@@ -11,48 +11,45 @@
     "url": "git+https://github.com/flippedround/uni-devtools.git",
     "directory": "packages/trpc-client"
   },
-  "bugs": {
-    "url": "https://github.com/flippedround/uni-devtools/issues"
-  },
   "exports": {
     "./package.json": "./package.json",
     ".": {
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
-      "default": "./dist/index.js"
-    },
-    "./links/httpBatchLink": {
-      "import": "./dist/links/httpBatchLink.mjs",
-      "require": "./dist/links/httpBatchLink.js",
-      "default": "./dist/links/httpBatchLink.js"
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.cjs"
     },
     "./links/httpLink": {
       "import": "./dist/links/httpLink.mjs",
-      "require": "./dist/links/httpLink.js",
-      "default": "./dist/links/httpLink.js"
+      "require": "./dist/links/httpLink.cjs",
+      "default": "./dist/links/httpLink.cjs"
     },
-    "./links/loggerLink": {
-      "import": "./dist/links/loggerLink.mjs",
-      "require": "./dist/links/loggerLink.js",
-      "default": "./dist/links/loggerLink.js"
+    "./links/httpBatchLink": {
+      "import": "./dist/links/httpBatchLink.mjs",
+      "require": "./dist/links/httpBatchLink.cjs",
+      "default": "./dist/links/httpBatchLink.cjs"
     },
     "./links/splitLink": {
       "import": "./dist/links/splitLink.mjs",
-      "require": "./dist/links/splitLink.js",
-      "default": "./dist/links/splitLink.js"
+      "require": "./dist/links/splitLink.cjs",
+      "default": "./dist/links/splitLink.cjs"
+    },
+    "./links/loggerLink": {
+      "import": "./dist/links/loggerLink.mjs",
+      "require": "./dist/links/loggerLink.cjs",
+      "default": "./dist/links/loggerLink.cjs"
     },
     "./links/wsLink": {
       "import": "./dist/links/wsLink.mjs",
-      "require": "./dist/links/wsLink.js",
-      "default": "./dist/links/wsLink.js"
+      "require": "./dist/links/wsLink.cjs",
+      "default": "./dist/links/wsLink.cjs"
     },
-    "./unstable-internals": {
-      "import": "./dist/unstable-internals.mjs",
-      "require": "./dist/unstable-internals.js",
-      "default": "./dist/unstable-internals.js"
+    "./shared": {
+      "import": "./dist/shared/index.mjs",
+      "require": "./dist/shared/index.cjs",
+      "default": "./dist/shared/index.cjs"
     }
   },
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "typings": "dist/index.d.ts",
   "files": [
@@ -61,41 +58,22 @@
     "dist",
     "links",
     "package.json",
-    "src",
-    "unstable-internals"
+    "shared",
+    "src"
   ],
   "scripts": {
-    "build": "rollup --config rollup.config.ts --configPlugin rollup-plugin-swc3",
-    "dev": "pnpm build --watch",
-    "codegen-entrypoints": "tsx entrypoints.script.ts",
-    "lint": "eslint --cache --ext \".js,.ts,.tsx\" --ignore-path ../../.gitignore src",
-    "ts-watch": "tsc --watch"
+    "stub": "unbuild --stub",
+    "build": "unbuild"
   },
   "peerDependencies": {
-    "@trpc/server": "^10.45.1"
+    "@trpc/server": "10.45.2"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@trpc/server": "^10.45.1",
+    "@trpc/server": "10.45.2",
     "@types/isomorphic-fetch": "^0.0.39",
     "@types/node": "^20.10.0",
-    "eslint": "^8.56.0",
     "isomorphic-fetch": "^3.0.0",
     "node-fetch": "^3.3.0",
-    "rollup": "^4.9.5",
-    "tslib": "^2.5.0",
-    "tsx": "^4.0.0",
     "undici": "^6.0.1"
-  },
-  "eslintConfig": {
-    "rules": {
-      "no-restricted-imports": [
-        "error",
-        "@trpc/client"
-      ]
-    }
-  },
-  "publishConfig": {
-    "access": "public"
   }
 }
