--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.21.1",
     "@antfu/ni": "^0.21.12",
+    "@dcloudio/types": "^3.4.7",
     "@types/node": "^20.14.2",
     "@unocss/eslint-config": "^0.59.4",
     "@unocss/eslint-plugin": "^0.59.4",
@@ -52,6 +53,7 @@
     "nodemon": "^3.1.3",
     "pnpm": "^9.0.2",
     "rimraf": "^5.0.7",
+    "rollup-plugin-swc3": "^0.11.2",
     "simple-git-hooks": "^2.9.0",
     "tsup": "^8.1.0",
     "turbo": "^2.0.4",
