--- a/packages/plugin/tsconfig.json
+++ b/packages/plugin/tsconfig.json
@@ -6,6 +6,9 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "types": [
+      "@dcloudio/types"
+    ],
     "allowJs": true,
     "checkJs": true,
     "strict": true,
