--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -60,6 +60,7 @@
     "@uni-helper/uni-env": "^0.1.1",
     "@vue/compiler-sfc": "^3.4.27",
     "body-parser": "^1.20.2",
+    "detect-port": "^1.6.1",
     "error-stack-parser-es": "^0.1.4",
     "execa": "^9.3.0",
     "image-meta": "^0.2.0",
@@ -79,6 +80,7 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.7",
+    "@types/detect-port": "^1.3.5",
     "@types/fs-extra": "^11.0.4",
     "@types/minimist": "^1.2.5",
     "@types/polka": "^0.5.7",
