--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -40,7 +40,11 @@
       ]
     }
   },
+  "bin": {
+    "ud": "./cli/index.cjs"
+  },
   "files": [
+    "cli",
     "client",
     "dist",
     "inspect"
