feat: components search

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.33",
     "@iconify-json/logos": "^1.1.42",
+    "@iconify-json/material-symbols": "^1.2.8",
     "@iconify-json/radix-icons": "^1.1.14",
     "@iconify-json/tabler": "^1.1.116",
     "@types/splitpanes": "^2.2.6",
