feat: pinia init

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,6 +26,7 @@
     "@trpc/client": "^10.45.2",
     "@uni-helper/devtools-shared": "workspace:*",
     "@uni-helper/devtools-types": "workspace:*",
+    "@vue/devtools-applet": "^7.6.7",
     "@vue/devtools-kit": "^7.3.6",
     "@vue/devtools-ui": "^7.3.4",
     "@vueuse/core": "^10.9.0",
@@ -48,6 +49,7 @@
     "@unocss/reset": "^0.60.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
+    "sass-embedded": "^1.82.0",
     "unocss": "^0.60.2",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
