--- a/packages/trpc-client/package.json
+++ b/packages/trpc-client/package.json
@@ -4,7 +4,7 @@
   "description": "The tRPC uni-app client library",
   "author": "FliPPeDround <flippedround@qq.com>",
   "license": "MIT",
-  "funding": "https://afdian.net/a/flippedround",
+  "funding": "https://afdian.com/a/flippedround",
   "homepage": "https://github.com/flippedround/uni-devtools#readme",
   "repository": {
     "type": "git",
