--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "devtools for uni",
   "author": "FliPPeDround <flippedround@qq.com>",
   "license": "MIT",
-  "funding": "https://afdian.net/a/flippedround",
+  "funding": "https://afdian.com/a/flippedround",
   "homepage": "https://github.com/flippedround/uni-devtools#readme",
   "repository": {
     "type": "git",
